fixed nav, fixed margins on mobile, updated .gitignore to not include uploads folder

--- a/public/stylesheet.css
+++ b/public/stylesheet.css
@@ -7,7 +7,7 @@ h1 { text-align: center; }
 
 @media (min-width: 767px){
     .container {
-        width: 1160px;
+        max-width: 1160px;
         margin-left: auto;
         margin-right: auto;
     }
@@ -105,7 +105,7 @@ nav li { padding-right: 15px; }
 }
 
 @media screen and (max-width: 550px) {
-    .image {margin: 15px 0; width: 100%; text-align: center; }
+    .image {margin: 15px 0; width: 95%; text-align: center; }
     #images-container .image img { border: 0; }
 }
 
@@ -124,3 +124,6 @@ footer {
     left: 0;
     font-size: 13px;
 }
+
+footer a { color: white; }
+footer a:hover { color: #201F36; }
